# pavithranrao.github.io

./: 404.html  README.md  index.html  mkdocs.yml  mkdocs.yml.backup  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
AI/LoRA/: lora-illustration.html
AI/LoRA/lora-illustration/: index.html
about/about/: index.html
assets/javascripts/: extra.js
assets/stylesheets/: extra.css
blog/: index.html
c++/c++_for_python/: index.html
docs/: 001_index.md  about.md  how_to_use_mkdocs.md  index.md  pavithran-ramachandran.md
docs/AI/LoRA/: lora-illustration.html  lora-illustration.md
docs/about/: about.md
docs/c++/: c++_for_python.md
docs/python/: pattern_matching.ipynb  pattern_matching.md  python.md
docs/python/pattern_matching/: pattern_matching.md
docs/rust/intro/: intro.md
docs/rust/rustlings/: 03.if.md  05.vecs.md  08.enums.md  09.strings.md  10.modules.md  11.hashmaps.md  12.options.md  13.error_handling.md  14.generics.md  15.traits.md  16.lifetimes.md  21.macros.md  23.conversions.md  clippy.md  functions.md  intro.md  iterators.md  move_semantics.md  primitive_types.md  smart_pointers.md  structs.md  tests.md  threads.md  variables.md
python/pattern_matching/pattern_matching/: index.html
python/python/: index.html
rust/intro/intro/: index.html
rust/rustlings/00.intro/: index.html
rust/rustlings/01.variables/: index.html
rust/rustlings/02.functions/: index.html
rust/rustlings/03.if/: index.html
rust/rustlings/04.primitive_types/: index.html
search/: search_index.json
(+19 files in other folders)
